// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Plan, create, and configure production-ready Azure Kubernetes Service (AKS) clusters. Covers Day-0 checklist, SKU selection (Automatic vs Standard), networking options (private API server, Azure CNI Overlay, egress configuration), security (workload identity, Azure Policy, Key Vault CSI driver, Deployment Safeguards), and operations (monitoring, upgrade strategy, autoscaling, cost analysis, node pools). WHEN: provision AKS cluster, design AKS networking, choose AKS SKU, secure AKS, set up AKS.",
  "extractedKeywords": [
    "aks",
    "analysis",
    "automatic",
    "autoscaling",
    "azure",
    "checklist",
    "choose",
    "cli",
    "cluster",
    "clusters",
    "configuration",
    "configure",
    "container",
    "cost",
    "covers",
    "create",
    "day-0",
    "deploy",
    "deployment",
    "design",
    "diagnostic",
    "driver",
    "egress",
    "entra",
    "function",
    "identity",
    "key vault",
    "kubernetes",
    "mcp",
    "monitor",
    "monitoring",
    "networking",
    "node",
    "observability",
    "operations",
    "options",
    "overlay",
    "plan",
    "policy",
    "pools",
    "private",
    "production-ready",
    "provision",
    "safeguards",
    "secure",
    "security",
    "selection",
    "server",
    "service",
    "standard",
    "strategy",
    "upgrade",
    "vault",
    "when",
    "workload",
  ],
  "name": "azure-kubernetes",
}
`;

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analysis",
  "automatic",
  "autoscaling",
  "azure",
  "checklist",
  "choose",
  "cli",
  "cluster",
  "clusters",
  "configuration",
  "configure",
  "container",
  "cost",
  "covers",
  "create",
  "day-0",
  "deploy",
  "deployment",
  "design",
  "diagnostic",
  "driver",
  "egress",
  "entra",
  "function",
  "identity",
  "key vault",
  "kubernetes",
  "mcp",
  "monitor",
  "monitoring",
  "networking",
  "node",
  "observability",
  "operations",
  "options",
  "overlay",
  "plan",
  "policy",
  "pools",
  "private",
  "production-ready",
  "provision",
  "safeguards",
  "secure",
  "security",
  "selection",
  "server",
  "service",
  "standard",
  "strategy",
  "upgrade",
  "vault",
  "when",
  "workload",
]
`;
